[package]
name = "cc-traits"
version = "0.5.2"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"
categories = ["data-structures", "no-std", "rust-patterns"]
keywords = ["trait", "data-structure", "collection", "common"]
description = "Common collection traits"
repository = "https://github.com/timothee-haudebourg/cc-traits"
documentation = "https://docs.rs/cc-traits"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
nostd = []
nightly = []

[dependencies]
slab = { version = "^0.4", optional = true }
smallvec = { version = "^1.6", optional = true }